# ait-reference

./: .gitignore  ChangeLog  ChangeLog.md  Changelog  Makefile.am  README.md  Roadmap.md  Strategy  Strategy.md  aitbuild  config.kaml.in  configure.ac
src/acronyms/: Makefile.am  informatics.yaml  internet-slang.yaml  usdod-cals.yaml
src/clists/: Makefile.am  capitals.yaml  currency.yaml  gec-fips14.yaml  genc-ed3u12-gec-as.yaml  genc-ed3u12-gec-ge.yaml  geonames.yaml  iso-15924.yaml  iso-3166-1.yaml  iso-3166-2.yaml  iso-3166-3.yaml  iso-4217.yaml  iso-639-2.yaml  iso-639-3.yaml  iso-639-5.yaml  months-fr.yaml  months.yaml  time-period.yaml  timezone.yaml  weekday.yaml  weekdays-fr.yaml
src/dict/: Makefile.am  franglais.yaml
src/glossary/: Makefile.am  informatics-a.yaml  informatics-b.yaml  informatics-c.yaml  informatics-d.yaml  informatics-e.yaml  informatics-f.yaml  informatics-g.yaml  informatics-h.yaml  informatics-i.yaml  informatics-j.yaml  informatics-k.yaml  informatics-l.yaml  informatics-m.yaml  informatics-n.yaml  informatics-o.yaml  informatics-p.yaml  informatics-q.yaml  informatics-r.yaml  informatics-s.yaml  informatics-t.yaml  informatics-u.yaml  informatics-v.yaml  informatics-w.yaml  informatics-x.yaml  investment.yaml  science-fr-xref.yaml
src/quotes/: Makefile.am  anagrams.yaml  authors.yaml  english.yaml  french-bug.yaml  funstuff.yaml  guilds.yaml
