AC_INIT([AIT Reference],[0.74.6],[http://github.com/ISLEcode/ait-reference/issues],[ait-reference],[http://github.com/ISLEcode/ait-reference])
AC_CONFIG_AUX_DIR([var])
AC_CONFIG_MACRO_DIR([var])
AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE
AC_PROG_CC
AC_PREFIX_DEFAULT(/opt/ait)
AC_SUBST(AIT_PREFIX, prefix)
AC_SUBST(PACKAGE_TARSUFFIX,PACKAGE_TARSUFFIX)
PACKAGE_TARSUFFIX=noarch
AC_CONFIG_FILES(Makefile config.kaml)
AC_CONFIG_FILES(src/acronyms/Makefile src/clists/Makefile src/dict/Makefile src/glossary/Makefile src/quotes/Makefile)
AC_OUTPUT
