
glossarydir               = $(exec_prefix)/etc/glossary
nobase_dist_glossary_DATA = \
                            informatics-a.yaml informatics-b.yaml informatics-c.yaml informatics-d.yaml informatics-e.yaml \
                            informatics-f.yaml informatics-g.yaml informatics-h.yaml informatics-i.yaml informatics-j.yaml \
                            informatics-k.yaml informatics-l.yaml informatics-m.yaml informatics-n.yaml informatics-o.yaml \
                            informatics-p.yaml informatics-q.yaml informatics-r.yaml informatics-s.yaml informatics-t.yaml \
                            informatics-u.yaml informatics-v.yaml informatics-w.yaml informatics-x.yaml \
                            investment.yaml \
                            science-fr-dict.yaml science-fr-xref.yaml
                            # science-fr/  TODO once decided where these should go

AUTOMAKE_OPTIONS          = gnu
ACLOCAL_AMFLAGS           = -I build
EXTRA_DIST                = Makefile.am $(nobase_dist_glossary_DATA)

